cif/org.eclipse.escet.cif.tests/tests/cif2plc/negative_zero_iec/STATE.plctype
TYPE STATE:
    STRUCT
        curTime: LREAL;
        dvar_M_p_v0 AT %Q*: LREAL;
        dvar_M_p_v1 AT %Q*: DINT;
        dvar_M_p_v2 AT %Q*: DINT;
        dvar_M_p_v3 AT %Q*: DINT;
        dvar_M_p_v99 AT %Q*: LREAL;
        dvar_M_p_vx AT %Q*: LREAL;
        dvar_M_p_vr AT %Q*: TupleStruct_1;
        dvar_M_p AT %Q*: enum_E;
    END_STRUCT;
END_TYPE
